- Adding new tutorial (with widgets) to describe the calculation of experimental variograms and use of model for Cvv
- Adding description of main classes (Db, Vario and daughter classes, Model and daughter classes).
- Improve the Tutorial on widgets
- Improve the Tutorial on Neighborhood to treat data along profiles
- New extension package (for R only): io.R (interface with 'sf' and 'terra')

Release 1.0.0
=============
- First version generated from a public github repo
- Remove geopandas python package dependency (issue #68) - No more gstlearn.proj module!!
- Fix Mac OS compilation
- Fix python and R readme
- Create Polygons from WKT files (QGIS export)
- New world.poly data file built from from NaturalEarth.com data
- Fix default R plots options usage
- Update credits in readmes
- Fix global estimation result access
- Factorization of courses content in MD files
- Fix filtering in kriging feature
- New function for creating experimental variogram from R data frames (Vario_fromDF)
- Improve experimental variogram calculation efficiency
- Fix initGeographic when using figsize in Python (locdims was not defined) 
- Make db_duplicate and db_tool_duplicate available thru swig
- Add loadData, loadDoc and setNoScroll functions in R and Python
- Fix inline equations rendering in html from jupyter notebooks
- The ways to render MD documentation files has changed in Python and R (as an indented note)

Release 0.4.1
=============
- Prevent NamingConvention from creating variables with empty name


Release 0.4.0
=============
- Update R readme
- Add severity check for model validity (used before kriging)
- Standardize graphics in R and Python
- Rename name1 and name2 into namex and namey for correlation representations
- Parameterize the amount of Nugget (technically) added in SPDE
- Corrections in the API functions of SPDE method
- New test (cpp) for benchmarking SPDE features
- Allow processing target variable with NA in SPDE API functions