@@ -78,6 +78,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f81f12d5",
+   "metadata": {},
+   "source": [
+    "Defining the visualization function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a233a1d",
@@ -111,6 +119,7 @@
     "    axs[1][0].clear()\n",
     "    axs[1][0].model(model,hmax=70,codir=[1,0],c=\"red\")\n",
     "    axs[1][0].model(model,hmax=70,codir=[0,1],c=\"black\")\n",
+    "    axs[1][0].geometry(xlim=[0,None])\n",
     "    axs[1][0].geometry(ylim=[0,sill*ymax])\n",
     "    axs[1][0].decoration(title=\"Variogram Model\")\n",
     "    \n",
@@ -118,6 +127,7 @@
     "    axs[1][1].clear()\n",
     "    axs[1][1].variogram(vario,idir=0,color=\"red\")\n",
     "    axs[1][1].variogram(vario,idir=1,color=\"black\")\n",
+    "    axs[1][1].geometry(xlim=[0,None])\n",
     "    axs[1][1].geometry(ylim=[0,sill*ymax])\n",
     "    axs[1][1].decoration(title=\"Experimental Variogram\")\n",
     "    \n",
@@ -126,6 +136,14 @@
     "    db.deleteColumn(\"*Simu\")\n",
     "    \n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55e0461d",
+   "metadata": {},
+   "source": [
+    "## Sensitivity of Model parameters"
    ]
   },
   {
@@ -152,12 +170,52 @@
    },
    "outputs": [],
    "source": [
-    "objectModel = gw.WModel(models, myCallBack)\n",
+    "objectModel = gw.WModel(models, myCallBack, defrank=2)\n",
     "\n",
     "display(objectModel)\n",
     "\n",
     "fig, axs = plt.subplots(2,2,figsize=(7,7))\n",
     "plotModel(axs, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac5eef8b",
+   "metadata": {},
+   "source": [
+    "## Creating a Model with drift"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de902598",
+   "metadata": {},
+   "source": [
+    "We consider building a Model of a 2-D Random Variable by pieces.\n",
+    "\n",
+    "We first define the covariance part (nested structures with a Nugget Effect and an isotropic Spherical scheme); then we add some drift conditions (first order Random Function)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ae7057c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating an empty Model\n",
+    "model = gl.Model()\n",
+    "\n",
+    "# Adding the covariance elements\n",
+    "model.addCovFromParam(type=gl.ECov.NUGGET, sill=2)\n",
+    "model.addCovFromParam(type=gl.ECov.SPHERICAL, range=10, sill=3)\n",
+    "\n",
+    "# Adding the drift items\n",
+    "model.addDrift(gl.DriftM())\n",
+    "model.addDrift(gl.DriftM([1]))\n",
+    "model.addDrift(gl.DriftM([0,1]))\n",
+    "\n",
+    "model"
    ]
   }
  ],
@@ -186,13 +244,18 @@
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
-   "skip_h1_title": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "313px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
