@@ -75,24 +75,16 @@ public:
                                        double *xd,
                                        double *yd,
                                        int *nint);
-  static int segmentIntersect(double xd1,
-                              double yd1,
-                              double xe1,
-                              double ye1,
-                              double xd2,
-                              double yd2,
-                              double xe2,
-                              double ye2,
-                              double *xint,
-                              double *yint);
-  static bool isSegmentIntersect(double xd1,
-                                 double yd1,
-                                 double xe1,
-                                 double ye1,
-                                 double xd2,
-                                 double yd2,
-                                 double xe2,
-                                 double ye2);
+  static bool segmentIntersect(double xd1,
+                               double yd1,
+                               double xe1,
+                               double ye1,
+                               double xd2,
+                               double yd2,
+                               double xe2,
+                               double ye2,
+                               double *xint,
+                               double *yint);
 
   static double geodeticAngularDistance(double long1,
                                         double lat1,
